--- a/resources/ui/overview.ui
+++ b/resources/ui/overview.ui
@@ -6,48 +6,37 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>449</width>
-    <height>366</height>
+    <width>609</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Overview</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="spacing">
-    <number>0</number>
-   </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <item>
     <widget class="QSplitter" name="splitter">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="handleWidth">
-      <number>4</number>
-     </property>
-     <widget class="Overview" name="image" native="true"/>
+     <widget class="Overview" name="image" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
      <widget class="InfoPanel" name="infos" native="true"/>
+     <widget class="QWidget" name="operators" native="true"/>
     </widget>
    </item>
   </layout>
+  <action name="actionErode">
+   <property name="text">
+    <string>Erode</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
