--- a/resources/ui/main.ui
+++ b/resources/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1071</width>
-    <height>810</height>
+    <width>1011</width>
+    <height>687</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,29 +40,7 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="QTabWidget" name="image">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="currentIndex">
-       <number>-1</number>
-      </property>
-      <property name="tabsClosable">
-       <bool>true</bool>
-      </property>
-      <property name="movable">
-       <bool>true</bool>
-      </property>
-      <property name="tabBarAutoHide">
-       <bool>true</bool>
-      </property>
-     </widget>
+     <widget class="BrowserWidget" name="mainView" native="true"/>
     </item>
    </layout>
   </widget>
@@ -71,8 +49,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1071</width>
-     <height>21</height>
+     <width>1011</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -121,19 +99,9 @@
     <addaction name="actionWorkers"/>
     <addaction name="actionImages"/>
    </widget>
-   <widget class="QMenu" name="menuOperators">
-    <property name="title">
-     <string>Operators</string>
-    </property>
-    <addaction name="actionEdge_detection"/>
-    <addaction name="actionErode"/>
-    <addaction name="actionDilate"/>
-    <addaction name="actionIdentity"/>
-   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
    <addaction name="menuView"/>
-   <addaction name="menuOperators"/>
    <addaction name="menuTools"/>
    <addaction name="menuHelp"/>
   </widget>
@@ -201,14 +169,14 @@
    </attribute>
    <widget class="QWidget" name="overview"/>
   </widget>
-  <widget class="DockWidget" name="imagesDock">
+  <widget class="DockWidget" name="sourceBrowserDock">
    <property name="windowTitle">
-    <string>Images</string>
+    <string>Sources</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>2</number>
    </attribute>
-   <widget class="SourceBrowser" name="images"/>
+   <widget class="SourceBrowser" name="sourceBrowser"/>
   </widget>
   <widget class="QToolBar" name="fileToolBar">
    <property name="windowTitle">
@@ -230,21 +198,6 @@
    <addaction name="actionRestart"/>
    <addaction name="actionExit"/>
   </widget>
-  <widget class="QToolBar" name="operatorToolBar">
-   <property name="windowTitle">
-    <string>toolBar_2</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>true</bool>
-   </attribute>
-   <addaction name="actionEdge_detection"/>
-   <addaction name="actionErode"/>
-   <addaction name="actionDilate"/>
-   <addaction name="actionIdentity"/>
-  </widget>
   <widget class="QToolBar" name="viewToolBar">
    <property name="windowTitle">
     <string>toolBar_2</string>
@@ -253,7 +206,7 @@
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>false</bool>
+    <bool>true</bool>
    </attribute>
    <addaction name="actionRestore_layout"/>
    <addaction name="actionSave_layout"/>
@@ -354,26 +307,6 @@
     <string>Restart</string>
    </property>
   </action>
-  <action name="actionEdge_detection">
-   <property name="text">
-    <string>Edge detection</string>
-   </property>
-  </action>
-  <action name="actionErode">
-   <property name="text">
-    <string>Erode</string>
-   </property>
-  </action>
-  <action name="actionDilate">
-   <property name="text">
-    <string>Dilate</string>
-   </property>
-  </action>
-  <action name="actionIdentity">
-   <property name="text">
-    <string>Identity</string>
-   </property>
-  </action>
   <action name="actionConsole">
    <property name="text">
     <string>Console</string>
@@ -428,6 +361,12 @@
    <class>DockWidget</class>
    <extends>QDockWidget</extends>
    <header>qtwidgets.dock_widget</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>BrowserWidget</class>
+   <extends>QWidget</extends>
+   <header>qtwidgets.browser.browser_widget</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
