--- a/resources/ui/overview.ui
+++ b/resources/ui/overview.ui
@@ -50,7 +50,7 @@
        </sizepolicy>
       </property>
      </widget>
-     <widget class="QWidget" name="operators" native="true">
+     <widget class="QWidget" name="toolBar" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
         <horstretch>0</horstretch>
@@ -96,16 +96,16 @@
         </spacer>
        </item>
        <item row="2" column="2">
-        <widget class="QCheckBox" name="histogram">
+        <widget class="QCheckBox" name="histogramControl">
          <property name="text">
           <string>Histogram</string>
          </property>
         </widget>
        </item>
        <item row="3" column="2">
-        <widget class="QCheckBox" name="config">
+        <widget class="QCheckBox" name="toolBarControl">
          <property name="text">
-          <string>Config</string>
+          <string>Toolbar</string>
          </property>
         </widget>
        </item>
