--- a/resources/ui/roi_view.ui
+++ b/resources/ui/roi_view.ui
@@ -42,7 +42,7 @@
        </sizepolicy>
       </property>
      </widget>
-     <widget class="QWidget" name="operators" native="true">
+     <widget class="QWidget" name="toolBar" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
         <horstretch>0</horstretch>
@@ -72,7 +72,7 @@
         <number>0</number>
        </property>
        <item>
-        <spacer name="horizontalSpacer_2">
+        <spacer name="leftSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -87,12 +87,12 @@
        <item>
         <widget class="QLabel" name="infos">
          <property name="text">
-          <string>infos</string>
+          <string>&lt;name&gt;</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="operatorCombo">
+        <widget class="QComboBox" name="operator">
          <item>
           <property name="text">
            <string>Identity</string>
@@ -116,7 +116,26 @@
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer">
+        <widget class="QComboBox" name="resampling">
+         <item>
+          <property name="text">
+           <string>cubic</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>bilinear</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>nearest</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <spacer name="rightSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
