--- a/resources/ui/main.ui
+++ b/resources/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1106</width>
-    <height>716</height>
+    <width>913</width>
+    <height>698</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,7 +40,7 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="BrowserWidget" name="mainView" native="true"/>
+     <widget class="FullOverview" name="mainView" native="true"/>
     </item>
    </layout>
   </widget>
@@ -49,7 +49,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1106</width>
+     <width>913</width>
      <height>22</height>
     </rect>
    </property>
@@ -91,7 +91,6 @@
     <property name="title">
      <string>Tools</string>
     </property>
-    <addaction name="actionOverview"/>
     <addaction name="actionConsole"/>
     <addaction name="actionWorkers"/>
     <addaction name="actionFileBrowser"/>
@@ -112,7 +111,7 @@
    <attribute name="dockWidgetArea">
     <number>8</number>
    </attribute>
-   <widget class="WorkerManagerWidget" name="worker"/>
+   <widget class="WorkerManagerWidget" name="workerBrowser"/>
   </widget>
   <widget class="DockWidget" name="consoleDock">
    <property name="windowTitle">
@@ -130,43 +129,7 @@
    <attribute name="dockWidgetArea">
     <number>2</number>
    </attribute>
-   <widget class="QWidget" name="fileBrowserWidget">
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <property name="spacing">
-      <number>0</number>
-     </property>
-     <property name="leftMargin">
-      <number>0</number>
-     </property>
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <property name="rightMargin">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QTreeView" name="fileBrowser"/>
-     </item>
-    </layout>
-   </widget>
-  </widget>
-  <widget class="DockWidget" name="overviewDock">
-   <property name="floating">
-    <bool>false</bool>
-   </property>
-   <property name="features">
-    <set>QDockWidget::AllDockWidgetFeatures</set>
-   </property>
-   <property name="windowTitle">
-    <string>Overview</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="overview"/>
+   <widget class="FileBrowser" name="fileBrowser"/>
   </widget>
   <widget class="DockWidget" name="sourceBrowserDock">
    <property name="windowTitle">
@@ -179,7 +142,7 @@
   </widget>
   <widget class="QToolBar" name="fileToolBar">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>fileToolBar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -199,7 +162,7 @@
   </widget>
   <widget class="QToolBar" name="viewToolBar">
    <property name="windowTitle">
-    <string>toolBar_2</string>
+    <string>viewToolBar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -222,7 +185,6 @@
     <bool>true</bool>
    </attribute>
    <addaction name="actionNotebook"/>
-   <addaction name="actionOverview"/>
    <addaction name="actionSourceBrowser"/>
    <addaction name="actionFileBrowser"/>
    <addaction name="actionConsole"/>
@@ -305,11 +267,6 @@
     <string>Console</string>
    </property>
   </action>
-  <action name="actionOverview">
-   <property name="text">
-    <string>Overview</string>
-   </property>
-  </action>
   <action name="actionFileBrowser">
    <property name="text">
     <string>FileBrowser</string>
@@ -360,9 +317,15 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>BrowserWidget</class>
+   <class>FileBrowser</class>
    <extends>QWidget</extends>
-   <header>qtwidgets.browser.browser_widget</header>
+   <header>piafedit.gui.file_browser</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>FullOverview</class>
+   <extends>QWidget</extends>
+   <header>piafedit.gui.image.full_overview</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
